[project]
name = "mamba_ssm"
description = "Mamba state-space model"
readme = "README.md"
authors = [
    { name = "Tri Dao", email = "tri@tridao.me" },
    { name = "Albert Gu", email = "agu@cs.cmu.edu" }
]
requires-python = ">= 3.9"
dynamic = ["version"]
license = { file = "LICENSE" }
keywords = ["cuda", "pytorch", "state-space model"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix"
]
dependencies = [
    "torch==2.1.0+cu118",
    "triton==2.0.0",
    "ninja==1.11.1.4",
    "einops==0.7.0",
    "transformers==4.51.3",
    "packaging==25.0",
    "setuptools>=61.0.0",
]

[project.urls]
Repository = "https://github.com/state-spaces/mamba"

[project.optional-dependencies]
causal-conv1d = [
    "causal-conv1d>=1.2.0"
]
dev = [
    "pytest"
]


[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "torch==2.1.0+cu118",
    "packaging",
    "ninja",
]
build-backend = "setuptools.build_meta"